Changes for APR 1.2.4

  *) Make the filePtr in apr_file_t an apr_off_t on Unix, to avoid issues
     truncating offsets down to 32 bits on large file systems.
     [Garrett Rooney]

  *) Fix seeks with files opened in xthread mode for append on win32.
     [M Joonas Pihlaja <jpihlaja cc.helsinki.fi>, Garrett Rooney]

  *) Keep testpipe.c from hanging on win32. [Garrett Rooney]

  *) Cause apr_file_write_full on win32 to consider the timeout value set by 
     apr_file_pipe_timeout_set.  PR 30182
     [<eholyat olf.com>]

  *) Fix assertion from double close of a handle with a rwlock on win32.
     [Evgueni Brevnov <evgueni.brevnov gmail.com>]

  *) Fix EOF handling for unbuffered reads on win32.
     [Konstantin Sharenkov <Konstantin.Sharenkov enterra-inc.com>]

  *) Documented that apr_stat and apr_dir_read can return APR_INCOMPLETE,
     and how to determine which parts of the resulting apr_finfo_t can be
     used in such a case.
     [Garrett Rooney]

  *) Fix passing "" as an argument to the program started by apr_proc_create
     on Win32.
     [Philip Martin <philip codematters.co.uk>

  *) Bugfix for apr_pollset_poll() on systems that implement pollsets
     using select(2): properly compute the number of signalled desciptors
     when one or more of them are both readable and writable.
     [Dror Shilo <Dror.Shilo ericom.com>, Gerry <gerry everythingsucks.co.uk>]

  *) Fix apr_file_seek() to catch write failures when flushing
     pending writes for a buffered file.  [Joe Orton]

Changes for APR 1.2.2

  *) Fix crash in apr_dir_make_recursive() for relative path
     when the working directory has been deleted.  [Joe Orton]

  *) Win32: fix apr_proc_mutex_trylock() to handle WAIT_TIMEOUT,
     returning APR_EBUSY.  [Ronen Mizrahi <ronen@tversity.com>]

  *) Fix apr_socket_opt_set() issue where TCP_NODELAY would be
     set when TCP_DEFER_ACCEPT was set.  [Brian Pane]

  *) Allow TCP_NODELAY and TCP_CORK to be set concurrently on