@@ -1,5 +1,9 @@
 Changes for APR 1.2.4
 
+  *) Correct bug in kqueue backend for apr_pollset where we would
+     erroneously indicate that a socket was readable or writeable.
+     [Garrett Rooney]
+
   *) Make the filePtr in apr_file_t an apr_off_t on Unix, to avoid issues
      truncating offsets down to 32 bits on large file systems.
      [Garrett Rooney]
